google site verification added

--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,4 @@ github-project-url: http://github.com/gnuarmeclipse
 sourceforge-project-url: http://sourceforge.net/projects/gnuarmeclipse
 
 google-analytics-id: UA-16767008-16
+google-site-verification: NT_y3tqI_8mrd8gYA_FDWHT2-tkJExOC6KBkSnyZx6c
