--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,7 @@ latest-news-pages: 5
 # Custom defs
 github-username:  ilg-ul
 
+github-project-name: gnuarmeclipse
 github-project-url: http://github.com/gnuarmeclipse
 sourceforge-project-url: http://sourceforge.net/projects/gnuarmeclipse
 
