--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,8 @@ github-project-name: gnuarmeclipse
 github-project-url: http://github.com/gnuarmeclipse
 sourceforge-project-url: http://sourceforge.net/projects/gnuarmeclipse
 
+facebook-page: https://facebook.com/gnuarmeclipse/
+
 google-analytics-id: UA-16767008-16
 google-site-verification: NT_y3tqI_8mrd8gYA_FDWHT2-tkJExOC6KBkSnyZx6c
 
