--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,8 @@ email: il@livius.net
 destination: _site
 exclude:
   - README.md
-  - jekyll-build.command
-  - jekyll-serve.command
-  - atom.command
-  - localhost-4000.webloc
+  - '*.command'
+  - '*.webloc'
 
 # The subpath of your site, e.g. /blog (note the leading slash and the
 # absence of a trailing slash).
