--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 # Travis CI configuration file to validate and deploy 
 # the GNU ARM Eclipse Jekyll site.
 
-# 2.3.1 
+# Use the new Debian 14 containers.
+dist: trusty
+sudo: false
+
 language: ruby
 rvm:
   - 2.3.1
