--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ sudo: false
 language: ruby
 rvm:
   - 2.3.1
-  
+
+git:
+  depth: 999999999
+
 env:
   global:
     - GITHUB_DEST_REPO="gnuarmeclipse/gnuarmeclipse.github.io"
